add animation to css file

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <img class="wheelchair" src="image/Cinderella-Carriage-PNG.png" alt="wheelchair">
             <img class="cinderella" src="image/cinderella_PNG37.png" alt="cinderella">
             <img class="jasmine" src="image/Princess-Jasmine-Transparent.png" alt="jasmine">
+            <img class="aladin" src="image/aladdin-transparent-1-Transparent-Images.png">
         </div>
     </section>
 </body>
